--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,12 @@
 @using Microsoft.AspNetCore.Identity;
-@inject SignInManager<AppUser> signInManager
+@inject SignInManager<AppUser> signInManager;
 
 <ul class="navbar-nav">
     @if (signInManager.IsSignedIn(User))
     {
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                @User.Identity!.Name!
+                @User.Identity!.Name
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
