--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿@model AppUser
+@using ASP_Project.ViewModel;
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<AppUser> signInManager;
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   
 </div>
