--- a/Views/Chat/Join.cshtml
+++ b/Views/Chat/Join.cshtml
@@ -1,19 +1,19 @@
 @using Microsoft.AspNetCore.Identity;
 @using ASP_Project.ViewModel;
-@model AddchatVM
+@model FilterchatVM
 @{
-    ViewData["Title"] = "Chat Page";
+    ViewData["Title"] = "Join Page";
 }
 
 <div class="text-center">
     <div class="row d-flex align-items-center justify-content-center">
         <div class="col-md-3 card p-3">
-            <h2 class="text-center text-info">Create Chat</h2>
-            <form asp-action="Create" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
+            <h2 class="text-center text-info">Join Chat</h2>
+            <form asp-action="Filterjoin" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="mb-1">
-                    <label asp-for="Movie" class="control-label">Movie</label>
-                    <select asp-for="Movie" id="movieSelect" class="form-control" >
+                    <label asp-for="movieid" class="control-label">Movie</label>
+                    <select asp-for="movieid" id="movieSelect" class="form-control" >
                     @foreach (var i in (IEnumerable<MovieEntity>)ViewBag.movie)
                     {
                     <option value="@i.Id">@i.Title</option>
@@ -22,8 +22,8 @@
                 </div>
 
                  <div class="mb-1">
-                    <label asp-for="Cinema" class="control-label">Cinema</label>
-                    <select asp-for="Cinema" id="cinemaSelect" class="form-control" >
+                    <label asp-for="cinemaid" class="control-label">Cinema</label>
+                    <select asp-for="cinemaid" id="cinemaSelect" class="form-control" >
                     @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
                     {
                     <option value="@i.CinemaEntity.Id">@i.CinemaEntity.Enterprise</option>
@@ -33,8 +33,8 @@
                 </div>
 
                 <div class="mb-1">
-                    <label asp-for="County" class="control-label">County</label>
-                    <select asp-for="County" id="countySelect" class="form-control" >
+                    <label  class="control-label">County</label>
+                    <select  id="countySelect" class="form-control" >
                     @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
                     {
                     <option value="@i.PlaceEntity.Id">@i.PlaceEntity.County</option>
@@ -44,8 +44,8 @@
                 </div>
 
                 <div class="mb-1">
-                    <label asp-for="Canton" class="control-label">Canton</label>
-                    <select asp-for="Canton" id="cantonSelect" class="form-control" >
+                    <label asp-for="placeid" class="control-label">Canton</label>
+                    <select asp-for="placeid" id="cantonSelect" class="form-control" >
                     @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
                     {
                     <option value="@i.PlaceEntity.Id">@i.PlaceEntity.Canton</option>
@@ -55,25 +55,14 @@
                 </div>
 
                 <div class="mb-1">
-                    <label asp-for="Showtime" class="control-label">Showtime</label>
-                    <select asp-for="Showtime" id="showtimeSelect" class="form-control" >
+                    <label asp-for="showtime" class="control-label">Showtime</label>
+                    <select asp-for="showtime" id="showtimeSelect" class="form-control" >
                     <option>Please select a Canton</option>
                     </select>
                 </div>
 
-    
-
-                <div class="mb-1">
-                <label for="numberSelect">เลือกตัวเลข:</label>
-                <select id="numberSelect" asp-for="MaxNumber">
-                    <option value="">โปรดเลือก</option>
-                </select>
-                </div>
-
-
-
                     <div class="col-4">
-                        <input type="submit" value="Create Chat" class="btn btn-primary btn-sm float-end" />
+                        <input type="submit" value="Filter" class="btn btn-primary btn-sm float-end" />
                     </div>
             </form>
         </div>
@@ -84,18 +73,7 @@
 
 @section Scripts {
     <script>
-        const selectElement = document.getElementById('numberSelect');
-
-    // สร้างตัวเลือกตั้งแต่ 2 ถึง 10
-        for (let i = 2; i <= 10; i++) {
-        // สร้างอ็อปชัน
-        const option = document.createElement('option');
-        // กำหนดค่าและข้อความ
-        option.value = i;
-        option.text = i;
-        // เพิ่มอ็อปชันเข้าไปในเลือก
-        selectElement.appendChild(option);
-        }
+        
 
 
         $(document).ready(function() {
@@ -211,7 +189,7 @@ function loadShowtimeData(movieid, cinemaid, placeid) {
             var showtimeSelect = $('#showtimeSelect');
             showtimeSelect.empty();
             $.each(response, function(index, item) {
-                showtimeSelect.append($('<option>').val(item.id).text(item.showtime));
+                showtimeSelect.append($('<option>').val(item.showtime).text(item.showtime));
             });
         },
 
