--- a/Views/Chat/Filterjoin.cshtml
+++ b/Views/Chat/Filterjoin.cshtml
@@ -26,7 +26,7 @@
                         <td>@chat.Id</td>
                         <td>@chat.remainNumber</td>
                         <td>@chat.maxNumber</td>
-                        <td>@item.image_user</td>
+                        @* <td>@item.image_user</td> *@
                             <div class="mb-1">
                                
                                <form asp-action="Joinchat" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
