--- a/Views/Chat/Create.cshtml
+++ b/Views/Chat/Create.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity;
 @using ASP_Project.ViewModel;
+@using ASP_Project.Models;
 @model AddchatVM
 @{
     ViewData["Title"] = "Chat Page";
