--- a/Views/Admin/Reports.cshtml
+++ b/Views/Admin/Reports.cshtml
@@ -15,7 +15,7 @@
             <h2>@Model[i].Title</h2>
         </div>
         <div class="header-info">
-            <img src=@ViewBag.Users[i].Image alt="Avatar" class="avatar">
+            <img src="@ViewBag.Users[i].Image" alt="Avatar" class="avatar">
             <div class="personal-info">
                 <span>@ViewBag.Users[i].Name</span>
                 <span>&lt;@ViewBag.Users[i].Email&gt;</span>
