--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -21,7 +21,7 @@
             <nav class="header">
                 <ul>
                     <li><i class="fa-solid fa-bars"></i></li>
-                    <li><a class="btn btn-hover__yellow">Logout</a></li>
+                    <li><a class="btn btn-hover__yellow" href="/account/logout">Logout</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,13 +29,7 @@
             <nav class="sidebar">
                 <ul>
                     <li>
-                        <a href="/dashboard">
-                            <i class="fa-solid fa-gauge"></i>
-                            <span>Dashboard</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/users">
+                        <a href="/admin/users">
                             <i class="fa-solid fa-users"></i>
                             <span>Users</span>
                         </a>
@@ -64,12 +58,6 @@
                     <i class="fa-solid fa-times"></i>
                 </div>
                 <ul>
-                    <li>
-                        <a href="/dashboard">
-                            <i class="fa-solid fa-gauge"></i>
-                            <span>Dashboard</span>
-                        </a>
-                    </li>
                     <li>
                         <a href="/users">
                             <i class="fa-solid fa-users"></i>
