--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -8,89 +8,37 @@
 
 }
 
-
 <div class="card">
     <div class="header">
         <h2>Sign Up</h2>
     </div>
     <form asp-action="Register" asp-controller="Account" method="post" class="register-form">
         <div class="input-group">
-            <input asp-for="Name" required>
+            <input type="text" asp-for="Name" required>
             <label asp-for="Name">Username</label>
             <i class="fas fa-user"></i>
         </div>
         <div class="input-group">
-            <input asp-for="Email" required>
+            <input type="email" asp-for="Email" required>
             <label asp-for="Email">Email</label>
             <i class="fas fa-envelope"></i>
         </div>
         <div class="input-group">
-            <input asp-for="Password" required>
+            <input type="password" asp-for="Password" required>
             <label asp-for="Password">Password</label>
             <i class="fas fa-lock"></i>
         </div>
         <div class="input-group">
-            <input asp-for="ConfirmPassword" required>
+            <input type="password" asp-for="ConfirmPassword" required>
             <label asp-for="ConfirmPassword">ConfirmPassword</label>
             <i class="fas fa-lock"></i>
         </div>
         <div class="input-group">
-            <input asp-for="Address" required>
+            <input type="text" asp-for="Address" required>
             <label asp-for="Address">Address</label>
-            <i class="fas fa-lock"></i>
+            <i class="fa-solid fa-location-dot"></i>
         </div>
         <button type="submit" class="btn btn-secondary">Sign Up</button>
         <p>Already have an account? <a asp-action="Login" asp-controller="Account">Sign In</a></p>
     </form>
 </div>
-
-
-
-@* 
-<div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-4 card p-3">
-        <h2 class="text-center text-info">Register</h2>
-        <form asp-action="Register" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-1">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="mb-1">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="mb-1">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="mb-1">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="mb-1">
-                <label asp-for="Address" class="control-label"></label>
-                <textarea asp-for="Address" class="form-control" rows="2"></textarea>
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-
-            <div class="row">
-                <div class="col-8">
-                    <a asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" class="text-decoration-none float-start mt-2">Have account?</a>
-                </div>
-                <div class="col-4">
-                    <input type="submit" value="Register" class="btn btn-primary btn-sm float-end" />
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-*@
-
-@section Scripts {
-    <script src="~/js/register.js" asp-append-version="true"></script>
-}
