--- a/Views/Shared/_UserLayout.cshtml
+++ b/Views/Shared/_UserLayout.cshtml
@@ -34,6 +34,7 @@
                 </ul>
         @if (User.Identity.IsAuthenticated)
         {
+            <li class="nav-items"><a href="/Account/Logout">Logout</a></li>
             <div class="profile">
                 <a href="/profile"><img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar"></a>
             </div>
