--- a/Views/Chat/Join.cshtml
+++ b/Views/Chat/Join.cshtml
@@ -3,6 +3,9 @@
 @model FilterchatVM
 @{
     ViewData["Title"] = "Join Page";
+    ViewData["Styles"] = "~/css/joinRoom.css";
+    ViewData["Scripts"] = "~/js/joinRoom.js";
+    Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 
 <div class="text-center">
@@ -11,55 +14,65 @@
             <h2 class="text-center text-info">Join Chat</h2>
             <form asp-action="Filterjoin" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="mb-1">
-                    <label asp-for="movieid" class="control-label">Movie</label>
-                    <select asp-for="movieid" id="movieSelect" class="form-control" >
-                    @foreach (var i in (IEnumerable<MovieEntity>)ViewBag.movie)
-                    {
-                    <option value="@i.Id">@i.Title</option>
-                    }
-                    </select>
-                </div>
+                <div class="gallery-wrap">
+                    <div class="gallery">
+                        <div class="slides">
+                            @* Render images dynamically here *@
+                        </div>
+                        <div class="button-container">
+                            <button id="backBtn" type="button">&lt;</button>
+                            <button id="nextBtn" type="button">&gt;</button>
+                        </div>
+                    </div>
+                    <div class="mb-1">
+                        <label asp-for="movieid" class="control-label">Movie</label>
+                        <select asp-for="movieid" id="movieSelect" class="form-control">
+                            @foreach (var i in (IEnumerable<MovieEntity>)ViewBag.movie)
+                            {
+                                <option value="@i.Id">@i.Title</option>
+                            }
+                        </select>
+                    </div>
 
-                 <div class="mb-1">
-                    <label asp-for="cinemaid" class="control-label">Cinema</label>
-                    <select asp-for="cinemaid" id="cinemaSelect" class="form-control" >
-                    @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
-                    {
-                    <option value="@i.CinemaEntity.Id">@i.CinemaEntity.Enterprise</option>
-                    } *@
-                    <option>Please select a Movie</option>
-                    </select>
-                </div>
+                    <div class="mb-1">
+                        <label asp-for="cinemaid" class="control-label">Cinema</label>
+                        <select asp-for="cinemaid" id="cinemaSelect" class="form-control">
+                            @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
+                            {
+                            <option value="@i.CinemaEntity.Id">@i.CinemaEntity.Enterprise</option>
+                            } *@
+                            <option>Please select a Movie</option>
+                        </select>
+                    </div>
 
-                <div class="mb-1">
-                    <label  class="control-label">County</label>
-                    <select  id="countySelect" class="form-control" >
-                    @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
-                    {
-                    <option value="@i.PlaceEntity.Id">@i.PlaceEntity.County</option>
-                    } *@
-                    <option>Please select a Cinema</option>
-                    </select>
-                </div>
+                    <div class="mb-1">
+                        <label class="control-label">County</label>
+                        <select id="countySelect" class="form-control">
+                            @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
+                            {
+                            <option value="@i.PlaceEntity.Id">@i.PlaceEntity.County</option>
+                            } *@
+                            <option>Please select a Cinema</option>
+                        </select>
+                    </div>
 
-                <div class="mb-1">
-                    <label asp-for="placeid" class="control-label">Canton</label>
-                    <select asp-for="placeid" id="cantonSelect" class="form-control" >
-                    @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
-                    {
-                    <option value="@i.PlaceEntity.Id">@i.PlaceEntity.Canton</option>
-                    } *@
-                    <option>Please select a County</option>
-                    </select>
-                </div>
+                    <div class="mb-1">
+                        <label asp-for="placeid" class="control-label">Canton</label>
+                        <select asp-for="placeid" id="cantonSelect" class="form-control">
+                            @* @foreach (var i in (IEnumerable<ProgramMovieEntity>)ViewBag.program)
+                            {
+                            <option value="@i.PlaceEntity.Id">@i.PlaceEntity.Canton</option>
+                            } *@
+                            <option>Please select a County</option>
+                        </select>
+                    </div>
 
-                <div class="mb-1">
-                    <label asp-for="showtime" class="control-label">Showtime</label>
-                    <select asp-for="showtime" id="showtimeSelect" class="form-control" >
-                    <option>Please select a Canton</option>
-                    </select>
-                </div>
+                    <div class="mb-1">
+                        <label asp-for="showtime" class="control-label">Showtime</label>
+                        <select asp-for="showtime" id="showtimeSelect" class="form-control">
+                            <option>Please select a Canton</option>
+                        </select>
+                    </div>
 
                     <div class="col-4">
                         <input type="submit" value="Filter" class="btn btn-primary btn-sm float-end" />
@@ -73,132 +86,132 @@
 
 @section Scripts {
     <script>
-        
 
 
-        $(document).ready(function() {
-    var movieid = $('#movieSelect').val();
-    loadCinemaData(movieid);
 
-
-    $('#movieSelect').change(function() {
-        var movieid = $(this).val();
-        loadCinemaData(movieid);
-    });
-
-  
-    $('#cinemaSelect').change(function() {
-        var cinemaid = $(this).val();
-        var movieid = $('#movieSelect').val();
-        loadPlaceData(cinemaid, movieid);
-    });
-
-    $('#countySelect').change(function() {
-        var countyid = $(this).val();
-        var cinemaid = $('#cinemaSelect').val();
-        var movieid = $('#movieSelect').val();
-        loadCantonData(movieid,cinemaid,countyid);
-        
-    })
-
-    $('#cantonSelect').change(function() {
-        var movieid = $('#movieSelect').val();
-        var cinemaid = $('#cinemaSelect').val();
-        var placeid = $(this).val()
-        console.log("555555");
-        loadShowtimeData(movieid, cinemaid, placeid);
-    })
-    });
-
-function loadCinemaData(movieid) {
-    $.ajax({
-        url: '@Url.Action("Loadmovie", "Chat")',
-        type: 'GET',
-        data: { movieId: movieid },
-        success: function(response) {
-            var cinemaSelect = $('#cinemaSelect');
-            cinemaSelect.empty();
-            $.each(response, function(index, item) {
-                cinemaSelect.append($('<option>').val(item.enterprise_result.id).text(item.enterprise_result.enterprise));
-            });
-            
-            var cinemaid = cinemaSelect.val();
+        $(document).ready(function () {
             var movieid = $('#movieSelect').val();
-            loadPlaceData(cinemaid,movieid);
-        },
-        error: function(xhr, status, error) {
-            console.error(xhr.responseText);
-        }
-    });
-}
+            loadCinemaData(movieid);
 
-function loadPlaceData(cinemaid,movieid) {
-    $.ajax({
-        url: '@Url.Action("Loadcinema", "Chat")',
-        type: 'GET',
-        data: { cinemaId: cinemaid ,movieId:movieid},
-        success: function(response) {
-            var countySelect = $('#countySelect');
-            countySelect.empty();
-            $.each(response, function(index, item) {
-                countySelect.append($('<option>').val(item.place_result.county).text(item.place_result.county));
+
+            $('#movieSelect').change(function () {
+                var movieid = $(this).val();
+                loadCinemaData(movieid);
             });
-            var movieid = $('#movieSelect').val();
-            var cinemaid = $('#cinemaSelect').val();
-            var placeid = $('#countySelect').val()
-            console.log("77777");
-            loadCantonData(movieid,cinemaid,placeid);
-        },
-        error: function(xhr, status, error) {
-            console.error(xhr.responseText);
-        }
-    });
-}
 
-function loadCantonData(movieid,cinemaid,placeid) {
-    $.ajax({
-        url: '@Url.Action("Loadcanton", "Chat")',
-        type: 'GET',
-        data: { movieId:movieid,cinemaId:cinemaid,placestr: placeid},
-        success: function(response) {
-            var cantonSelect = $('#cantonSelect');
-            cantonSelect.empty();
-            $.each(response, function(index, item) {
-                cantonSelect.append($('<option>').val(item.place_result.id).text(item.place_result.canton));
+
+            $('#cinemaSelect').change(function () {
+                var cinemaid = $(this).val();
+                var movieid = $('#movieSelect').val();
+                loadPlaceData(cinemaid, movieid);
             });
-            console.log("9999999");
-            var movieid = $('#movieSelect').val();
-            var cinemaid = $('#cinemaSelect').val();
-            var placeid = $('#cantonSelect').val()
-            loadShowtimeData(movieid, cinemaid, placeid);
-        
-        },
-       
-        error: function(xhr, status, error) {
-            console.error(xhr.responseText);
-        }
-    });
-}
 
-function loadShowtimeData(movieid, cinemaid, placeid) {
-    $.ajax({
-        url: '@Url.Action("Loadshowtime", "Chat")',
-        type: 'GET',
-        data: { movieId:movieid,cinemaId:cinemaid,placeId: placeid},
-        success: function(response) {
-            var showtimeSelect = $('#showtimeSelect');
-            showtimeSelect.empty();
-            $.each(response, function(index, item) {
-                showtimeSelect.append($('<option>').val(item.showtime).text(item.showtime));
+            $('#countySelect').change(function () {
+                var countyid = $(this).val();
+                var cinemaid = $('#cinemaSelect').val();
+                var movieid = $('#movieSelect').val();
+                loadCantonData(movieid, cinemaid, countyid);
+
+            })
+
+            $('#cantonSelect').change(function () {
+                var movieid = $('#movieSelect').val();
+                var cinemaid = $('#cinemaSelect').val();
+                var placeid = $(this).val()
+                console.log("555555");
+                loadShowtimeData(movieid, cinemaid, placeid);
+            })
+        });
+
+        function loadCinemaData(movieid) {
+            $.ajax({
+                url: '@Url.Action("Loadmovie", "Chat")',
+                type: 'GET',
+                data: { movieId: movieid },
+                success: function (response) {
+                    var cinemaSelect = $('#cinemaSelect');
+                    cinemaSelect.empty();
+                    $.each(response, function (index, item) {
+                        cinemaSelect.append($('<option>').val(item.enterprise_result.id).text(item.enterprise_result.enterprise));
+                    });
+
+                    var cinemaid = cinemaSelect.val();
+                    var movieid = $('#movieSelect').val();
+                    loadPlaceData(cinemaid, movieid);
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
             });
-        },
-
-        
-        error: function(xhr, status, error) {
-            console.error(xhr.responseText);
         }
-    });
-}
+
+        function loadPlaceData(cinemaid, movieid) {
+            $.ajax({
+                url: '@Url.Action("Loadcinema", "Chat")',
+                type: 'GET',
+                data: { cinemaId: cinemaid, movieId: movieid },
+                success: function (response) {
+                    var countySelect = $('#countySelect');
+                    countySelect.empty();
+                    $.each(response, function (index, item) {
+                        countySelect.append($('<option>').val(item.place_result.county).text(item.place_result.county));
+                    });
+                    var movieid = $('#movieSelect').val();
+                    var cinemaid = $('#cinemaSelect').val();
+                    var placeid = $('#countySelect').val()
+                    console.log("77777");
+                    loadCantonData(movieid, cinemaid, placeid);
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+        }
+
+        function loadCantonData(movieid, cinemaid, placeid) {
+            $.ajax({
+                url: '@Url.Action("Loadcanton", "Chat")',
+                type: 'GET',
+                data: { movieId: movieid, cinemaId: cinemaid, placestr: placeid },
+                success: function (response) {
+                    var cantonSelect = $('#cantonSelect');
+                    cantonSelect.empty();
+                    $.each(response, function (index, item) {
+                        cantonSelect.append($('<option>').val(item.place_result.id).text(item.place_result.canton));
+                    });
+                    console.log("9999999");
+                    var movieid = $('#movieSelect').val();
+                    var cinemaid = $('#cinemaSelect').val();
+                    var placeid = $('#cantonSelect').val()
+                    loadShowtimeData(movieid, cinemaid, placeid);
+
+                },
+
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+        }
+
+        function loadShowtimeData(movieid, cinemaid, placeid) {
+            $.ajax({
+                url: '@Url.Action("Loadshowtime", "Chat")',
+                type: 'GET',
+                data: { movieId: movieid, cinemaId: cinemaid, placeId: placeid },
+                success: function (response) {
+                    var showtimeSelect = $('#showtimeSelect');
+                    showtimeSelect.empty();
+                    $.each(response, function (index, item) {
+                        showtimeSelect.append($('<option>').val(item.showtime).text(item.showtime));
+                    });
+                },
+
+
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+        }
 
     </script>
 }
