--- a/Views/Profile/Requests.cshtml
+++ b/Views/Profile/Requests.cshtml
@@ -1,6 +1,13 @@
 @* @using ASP_Project.ViewModel;
 @model AddrequestVM *@
 
+@{
+    ViewData["Title"] = "Profile Page";
+    @* ViewData["Styles"] = "~/css/profile.css";
+ViewData["Scripts"] = "~/js/profile.js";
+Layout = "~/Views/Shared/_BaseLayout.cshtml"; *@
+}
+
 <table>
     <thead>
         <tr>
