--- a/Views/Profile/index.cshtml
+++ b/Views/Profile/index.cshtml
@@ -16,7 +16,14 @@
 
 <body>
     <section class="user-profile">
-        <h1 class="header-title">Profile</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="header-title float-left">Profile</h1>
+                    <a asp-action="Requests" class="btn btn-warning">Receipt Requests</a>
+                </div>
+            </div>
+        </div>
         <div class="info">
             <div class="user">
                 <img src="@Html.DisplayFor(model => model.Image)" alt="profile-img" />
